--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,11 @@
 {
-  "presets": ["es2015", "stage-0", "react"],
-  "plugins": ["add-module-exports", "transform-decorators-legacy", "transform-runtime"]
+  "presets": [
+    // "@babel/preset-env",
+    // "@babel/preset-react"
+    "react-app"
+  ],
+  "plugins": [
+    // "@babel/plugin-proposal-class-properties",
+    "react-hot-loader/babel"
+  ]
 }
