--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-node_modules
-npm-debug.log
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.history
 
-build/
-dev/
-
-*.zip
-*.crx
-*.pem
-update.xml
+# secrets
+secrets.*.js
