--- a/package.json
+++ b/package.json
@@ -1,86 +1,57 @@
 {
-  "name": "react-chrome-extension-boilerplate",
-  "version": "0.9.0",
-  "description": "Boilerplate for Chrome extension React.js project",
-  "scripts": {
-    "dev": "node scripts/dev",
-    "build": "node scripts/build",
-    "compress": "node scripts/compress",
-    "compress-keygen": "crx keygen",
-    "clean": "rimraf build/ dev/ *.zip *.crx",
-    "lint": "eslint app chrome test scripts webpack/*.js",
-    "test-e2e": "cross-env NODE_ENV=test mocha -r ./test/setup-app test/e2e",
-    "test": "cross-env NODE_ENV=test mocha -r ./test/setup-app test/app"
-  },
+  "name": "chrome-extension-boilerplate-react",
+  "version": "4.1.1",
+  "description": "A chrome extension boilerplate built with React 17 and Webpack 5",
+  "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jhen0409/react-chrome-extension-boilerplate.git"
+    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
   },
-  "keywords": [
-    "chrome",
-    "extension",
-    "react",
-    "redux",
-    "hot reload",
-    "webpack",
-    "boilerplate"
-  ],
-  "author": "Jhen <developer@jhen.me>",
-  "license": "MIT",
-  "devDependencies": {
-    "babel-core": "^6.3.15",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-decorators-legacy": "^1.2.0",
-    "babel-plugin-transform-runtime": "^6.5.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-react-hmre": "^1.0.0",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^6.3.19",
-    "chai": "^3.2.0",
-    "chromedriver": "^2.33.2",
-    "cross-env": "^3.1.3",
-    "crx": "^3.0.3",
-    "css-loader": "^0.25.0",
-    "css-modules-require-hook": "^4.0.5",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-plugin-import": "^1.16.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.5.0",
-    "jsdom": "^9.2.1",
-    "minimist": "^1.2.0",
-    "mocha": "^3.1.2",
-    "postcss-loader": "^1.2.1",
-    "pug-cli": "^1.0.0-alpha6",
-    "react-addons-test-utils": "^15.0.2",
-    "rimraf": "^2.4.3",
-    "selenium-webdriver": "^2.47.0",
-    "shelljs": "^0.7.0",
-    "sinon": "^1.17.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^3.10.0",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-httpolyglot-server": "^0.3.0"
+  "scripts": {
+    "build": "node utils/build.js",
+    "start": "node utils/webserver.js",
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
-    "autoprefixer": "^7.2.5",
-    "bluebird": "^3.3.4",
-    "classnames": "^2.2.6",
-    "graphiql": "^0.12.0",
-    "graphql": "^14.0.2",
-    "graphql-syntax-highlighter-react": "^0.3.5",
-    "react": "^15.0.2",
-    "react-dock": "^0.2.3",
-    "react-dom": "^15.0.2",
-    "react-json-pretty": "^1.7.9",
-    "react-json-tree": "^0.11.2",
-    "react-redux": "^4.3.0",
-    "redux": "^3.2.1",
-    "redux-thunk": "^2.0.1",
-    "uuid": "^3.3.2"
+    "@hot-loader/react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-hot-loader": "^4.13.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@types/chrome": "^0.0.159",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.10",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "babel-preset-react-app": "^10.0.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.2.7",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^6.1.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "fs-extra": "^10.0.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.4.0",
+    "node-sass": "^6.0.1",
+    "prettier": "^2.4.1",
+    "sass-loader": "^12.2.0",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.2.4",
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^3.11.2"
   }
 }
