--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
+    "react-table": "^7.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/chrome": "^0.0.159",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.10",
+    "@types/react-table": "^7.7.7",
     "@types/uuid": "^8.3.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
